Focus ring now correctly appears when the token field becomes the first responder.

--- a/CustomTokenField/Base.lproj/Main.storyboard
+++ b/CustomTokenField/Base.lproj/Main.storyboard
@@ -710,9 +710,18 @@
                                 <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                                 <color key="fillColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </box>
+                            <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jcH-Bm-sFA">
+                                <rect key="frame" x="20" y="195" width="96" height="22"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="Dfx-lg-Qfd">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                     </view>
                     <connections>
+                        <outlet property="containerBoxView" destination="Db2-32-U2n" id="H94-IY-2Ce"/>
                         <outlet property="scrollView" destination="nCO-yH-DzG" id="4cG-VN-O7f"/>
                         <outlet property="view" destination="m2S-Jp-Qdl" id="iTR-Hk-1tw"/>
                     </connections>
