Token field contents box is now custom to avoid the XCode warning.

--- a/CustomTokenField/Base.lproj/Main.storyboard
+++ b/CustomTokenField/Base.lproj/Main.storyboard
@@ -674,24 +674,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <box fixedFrame="YES" title="Box" borderType="bezel" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="Db2-32-U2n" customClass="SMCustomTokenFieldBox">
-                                <rect key="frame" x="17" y="227" width="446" height="22"/>
+                            <box fixedFrame="YES" title="Box" boxType="custom" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="Db2-32-U2n" customClass="SMCustomTokenFieldBox">
+                                <rect key="frame" x="20" y="231" width="440" height="22"/>
                                 <view key="contentView" ambiguous="YES" id="dec-XB-DNG">
-                                    <rect key="frame" x="3" y="3" width="440" height="16"/>
+                                    <rect key="frame" x="1" y="1" width="438" height="20"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="clL-G6-SeS">
-                                            <rect key="frame" x="0.0" y="1" width="14" height="14"/>
-                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="search-icon" id="ueT-d8-KjE"/>
-                                        </imageView>
                                         <scrollView fixedFrame="YES" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" verticalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="nCO-yH-DzG">
-                                            <rect key="frame" x="17" y="-2" width="423" height="18"/>
+                                            <rect key="frame" x="20" y="0.0" width="419" height="22"/>
                                             <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="Lfp-RU-r7g">
-                                                <rect key="frame" x="0.0" y="0.0" width="423" height="18"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="419" height="22"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AEE-le-hLG">
-                                                        <rect key="frame" x="0.0" y="-76" width="423" height="20"/>
+                                                        <rect key="frame" x="0.0" y="-72" width="419" height="20"/>
                                                     </view>
                                                 </subviews>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -705,6 +701,10 @@
                                                 <autoresizingMask key="autoresizingMask"/>
                                             </scroller>
                                         </scrollView>
+                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="clL-G6-SeS">
+                                            <rect key="frame" x="3" y="3" width="14" height="14"/>
+                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="search-icon" id="ueT-d8-KjE"/>
+                                        </imageView>
                                     </subviews>
                                 </view>
                                 <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
